added check for python version to grab the correct image from tasks

--- a/crop_yield/descartes-labs-crop-yield-demo.ipynb
+++ b/crop_yield/descartes-labs-crop-yield-demo.ipynb
@@ -41,6 +41,7 @@
     "import sklearn\n",
     "import sklearn.cluster\n",
     "import sklearn.ensemble\n",
+    "import sys\n",
     "\n",
     "# Create storage and catalog clients\n",
     "storage_client = Storage()\n",
@@ -738,10 +739,14 @@
     "from descarteslabs.client.services.tasks import AsyncTasks, as_completed\n",
     "at = AsyncTasks()\n",
     "\n",
+    "# get the correct python version to match the image\n",
+    "version = \"{}.{}\".format(sys.version_info[0], sys.version_info[1])\n",
+    "image_link='us.gcr.io/dl-ci-cd/images/tasks/public/py{}/default:v2019.02.12'.format(version)\n",
+    "\n",
     "async_function = at.create_function(calculate_gdd_task, \n",
     "                                    name=\"demo-crop-yield\",\n",
     "                                    memory='10Gi',\n",
-    "                                    image='us.gcr.io/dl-ci-cd/images/tasks/public/py3.6/default:v2019.02.12',\n",
+    "                                    image=image_link,\n",
     "                                    task_timeout=5000\n",
     "                                    )"
    ]
@@ -962,9 +967,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
