Update getting started notebook to use the new Catalog API
Eliminates use of the deprecated metadata client.

--- a/getting_started.ipynb
+++ b/getting_started.ipynb
@@ -99,7 +99,7 @@
    "source": [
     "## Searching for available imagery \n",
     "The Descartes Labs platform pulls together data from over 75 different sources. We call each of these distinct offerings products, and they all have their own unique IDs. Even derived or external data you save into the platform has a product ID. The first parameter when searching for data is a list of product IDs to specify what kind of imagery you want returned. \n",
-    "To view products you have access to, you can use the [catalog interface](https://catalog.descarteslabs.com/) which allows you to search our products and displays all their metadata information including details about spectral bands, classes, lifespan, and more. The catalog is an interface for our Metadata API. You can get back all the same information programmatically using the Metadata API. "
+    "To view products you have access to, you can use the [catalog interface](https://catalog.descarteslabs.com/) which allows you to search our products and displays all their metadata information including details about spectral bands, classes, lifespan, and more. You can get back all the same information programmatically using the Catalog API. "
    ]
   },
   {
@@ -116,9 +116,11 @@
     }
    ],
    "source": [
+    "from descarteslabs.catalog import Product, Band\n",
+    "\n",
     "# Return all the products you have access to\n",
-    "products = dl.metadata.products() \n",
-    "print(\"I currently have access to {} products. Some of these may not be publically available.\".format(len(products)))"
+    "products = Product.search() \n",
+    "print(\"I currently have access to {} products. Some of these may not be publically available.\".format(products.count()))"
    ]
   },
   {
@@ -153,9 +155,10 @@
     }
    ],
    "source": [
-    "# Get back all band names based on a product ID \n",
-    "bands = dl.metadata.bands('landsat:LC08:PRE:TOAR')\n",
-    "[band['name'] for band in bands]"
+    "# Look up a product and get back all its band names \n",
+    "product = Product.get('landsat:LC08:PRE:TOAR')\n",
+    "bands = product.bands()\n",
+    "[band.name for band in bands]"
    ]
   },
   {
