New table names & language

--- a/vektorius/02_vessel_counts.ipynb
+++ b/vektorius/02_vessel_counts.ipynb
@@ -5,17 +5,19 @@
    "metadata": {},
    "source": [
     "# Vessel Counts\n",
-    "You should look at the `voyages_v1b_route` table when you want information about where a vessel was _and_ when it was there. This table is useful when you want to find how many vessels were in a specific region of the South China Sea on January 1, 2020.  To do this, you use a simple `count` aggregation after you filter your data:"
+    "You should look at the `voyages_routes` table when you want information about where a vessel was _and_ when it was there. This table is useful when you want to find how many vessels were in a specific region of the South China Sea on January 1, 2020.  To do this, you use a simple `count` aggregation after you filter your data:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from descarteslabs.vektorius import vector\n",
     "from shapely.geometry import shape\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "\n",
     "aoi = shape({\n",
     "    \"type\": \"Polygon\",\n",
@@ -29,21 +31,32 @@
     "        ]\n",
     "    ]\n",
     "})\n",
-    "route = vector.table(\"voyages_v1b_route\")"
+    "route = vector.table(\"voyages_routes\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`voyages_v1b_route` is a pretty large table, with over 150 million rows, which means interacting with  it can be cumbersom if you're not careful about how you filter your data.  When working with this table it's especially important to use temporal `Filters` whenever possible, because the `timestamp` column is Clustered, and temporal filters can dramatically reduce the amount of data that needs to be scanned."
+    "`voyages_routes` is a pretty large table, with over 150 million rows, which means interacting with  it can be cumbersom if you're not careful about how you filter your data.  When working with this table it's especially important to use temporal `Filters` whenever possible, because the `timestamp` column is Clustered, and temporal filters can dramatically reduce the amount of data that needs to be scanned."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "67"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# find routes that intersect with the AOI at the given point in time\n",
     "filter_ = (route.timestamp.date() == \"2020-01-01\") & route.position.intersects(aoi)\n",
@@ -63,18 +76,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can make this aggregation a little more interesting by adding in some vessel information to the counts. You first Join vessel information from vessels_v3 to the filtered route information you grabbed before.\n",
+    "You can make this aggregation a little more interesting by adding in some vessel information to the counts. You first Join vessel information from vessels to the filtered route information you grabbed before.\n",
     "\n",
-    "Joins work by specifying a left and right table, a Join type (inner_join, left_join, cross_join, etc), and a Join condition."
+    "Joins work by specifying a left and right table, a Join type (`inner_join`, `left_join`, `cross_join`, etc), and a Join condition."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vessel = vector.table(\"vessels_v3\")\n",
+    "vessel = vector.table(\"vessels\")\n",
     "\n",
     "# `filtered_route` is the left table, that we want to inner_join\n",
     "# to `vessel` where the `mmsi` column of both tables match\n",
@@ -92,14 +105,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that you've performed the Join you can construct your aggregation, which uses a more complex form of aggregation that specifies which columns you want to group by, and what aggregation algorithm you want to use. In this case, you want to see how many voyages were made by each ship_type, so you need to group by ship_type and get a count of each voyage."
+    "Now that you've performed the Join you can construct your aggregation, which uses a more complex form of aggregation that specifies which columns you want to group by, and what aggregation algorithm you want to use. In this case, you want to see how many voyages were made by each `ship_type`, so you need to group by `ship_type` and get a count of each voyage."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ship_type</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Cargo</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Wing In Ground</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Other</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        ship_type  count\n",
+       "0           Cargo     65\n",
+       "1  Wing In Ground      1\n",
+       "2           Other      1"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# group by class, and specify the aggretation algorithm for the group\n",
     "data = data.group_by(data.ship_type).aggregate(data.mmsi.count())\n",
@@ -110,6 +180,13 @@
     "vessel_count = data.execute()\n",
     "vessel_count"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
