--- a/vektorius/03_voyages.ipynb
+++ b/vektorius/03_voyages.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Vessels making voyages\n",
-    "The voyages_v1b_voyage table contains top level information about a voyage from one port to another, including when and where the voyage started and ended, and which vessel was involved in the voyage. You can use this ingormation to which vessels made a voyage from one port to another in some time range:"
+    "The `voyages` table contains top level information about a voyage from one port to another, including when and where the voyage started and ended, and which vessel was involved in the voyage. You can use this information to identify which vessels made a voyage from one port to another in some time range:"
    ]
   },
   {
@@ -18,9 +18,11 @@
    "source": [
     "from descarteslabs.vektorius import vector\n",
     "from ipyleaflet import Map, GeoJSON\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "\n",
-    "ports = vector.table(\"ports_v2\")\n",
-    "voyages = vector.table(\"voyages_v1b_voyage\")\n",
+    "ports = vector.table(\"ports\")\n",
+    "voyages = vector.table(\"voyages\")\n",
     "\n",
     "# find geometry of start/end ports  that we care about\n",
     "origin_port_name = \"PORT DE SALVADOR\"\n",
@@ -60,9 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# create a map with ipyleaflet\n",
@@ -88,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vessels = vector.table(\"vessels_v3\")\n",
+    "vessels = vector.table(\"vessels\")\n",
     "\n",
     "joined = voyages.inner_join(vessels, vessels.mmsi == voyages.mmsi)\n",
     "\n",
@@ -106,6 +106,13 @@
     "df = grouped.execute()\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
